--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.6</version>
-        <relativePath/> <!-- Lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.embabel.template</groupId>
     <artifactId>ProjectName</artifactId>
