--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.3</version>
+        <version>3.5.6</version>
         <relativePath/> <!-- Lookup parent from repository -->
     </parent>
+
     <groupId>com.embabel.template</groupId>
-    <artifactId>ProjectName</artifactId>
+    <artifactId>Hello-Embabel-Java</artifactId>
     <version>0.1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>My first agent</name>
-    <description>Generated agent project</description>
 
     <properties>
         <java.version>21</java.version>
-        <embabel-agent.version>0.1.0-SNAPSHOT</embabel-agent.version>
+        <embabel-agent.version>0.1.3</embabel-agent.version>
     </properties>
 
     <dependencies>
@@ -32,12 +30,23 @@
 
         <dependency>
             <groupId>com.embabel.agent</groupId>
-            <artifactId>embabel-agent-test</artifactId>
+            <artifactId>embabel-agent-starter-ollama</artifactId>
             <version>${embabel-agent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.embabel.agent</groupId>
+            <artifactId>embabel-agent-starter-shell</artifactId>
+            <version>${embabel-agent.version}</version>
+        </dependency>
 
         <!-- Unit and Integration Testing -->
+        <dependency>
+            <groupId>com.embabel.agent</groupId>
+            <artifactId>embabel-agent-test</artifactId>
+            <version>${embabel-agent.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -57,13 +66,22 @@
 
     <repositories>
         <repository>
+            <id>embabel-releases</id>
+            <url>https://repo.embabel.com/artifactory/libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>embabel-snapshots</id>
             <url>https://repo.embabel.com/artifactory/libs-snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
-
 
 </project>
